<resources>
    <string name="app_name">Setting</string>
    <string name="index_language">Language</string>
    <string name="index_bright">Brightness</string>
    <string name="index_sound">Keypress Sound</string>
    <string name="index_Wifi">Wifi</string>
    <string name="index_Bluetooth">Bluetooth</string>
    <string name="index_About">About</string>
    <string name="about_title">DeviceInfo</string>
    <string name="android_version">AndroidVersion</string>
    <string name="device_code">DeviceName</string>
    <string name="software_version">SoftwareVersion</string>
    <string name="language_select">Language Select</string>
    <string name="wifi_mac">WiFi Mac</string>
    <string name="bluetooth_mac">Bluetooth Mac</string>
    <string name="status_on">On</string>
    <string name="status_off">Off</string>

    <string name="factory_button">Factory Reset</string>
    <string name="factory_dialog_title">Restoring factory settings will clear all data and then restart.</string>
    <string name="factory_dialog_cancel">Cancel</string>
    <string name="factory_dialog_Confirm">Confirm</string>
    <string name="time_setting">Time</string>
    <string name="time_useNetTime">Internet Time</string>
    <string name="time_time_title">Time Settings</string>
    <string name="time_date_title">Date</string>
    <string name="time_24Hours_title">24-Hours</string>
    <string name="time_timeZone_title">TimeZone</string>
    <string name="time_timePicker_title">Time Settings</string>
    <string name="time_datePicker_title">Date Settings</string>

    <string name="light">Joystick Light</string>
    <string name="light_brightness_high">High</string>
    <string name="light_brightness_medium">Medium</string>
    <string name="light_brightness_low">Low</string>
    <string name="light_mode_title">" Mode"</string>
    <string name="light_mode_steady_on_Red">Static Red</string>
    <string name="light_mode_steady_on_Yellow">Static Yellow</string>
    <string name="light_mode_steady_on_Green">Static Green</string>
    <string name="light_mode_steady_on_Skyblue">Static Sky Blue</string>
    <string name="light_mode_steady_on_Blue">Static Blue</string>
    <string name="light_mode_steady_on_Purple">Static Purple</string>
    <string name="light_mode_steady_on_Lightblue">Static Light Blue</string>
    <string name="light_mode_steady_on_White">Static White</string>
    <string name="light_mode_breath_Red">Breath Red</string>
    <string name="light_mode_breath_Yellow">Breath Yellow</string>
    <string name="light_mode_breath_Green">Breath Green</string>
    <string name="light_mode_breath_Skyblue">Breath Sky Blue</string>
    <string name="light_mode_breath_Blue">Breath Blue</string>
    <string name="light_mode_breath_Purple">Breath Purple</string>
    <string name="light_mode_breath_Lightblue">Breath Light Blue</string>
    <string name="light_mode_breath_White">Breath White</string>
    <string name="light_mode_breath_ColorCycle">Breath Color Cycle</string>
    <string name="light_mode_rotating_ColorCycle">Rotating Color Cycle</string>
    <string name="light_mode_turn_off">Turn off</string>
    <string name="light_rotation_speed">Rotation Speed</string>
    <string name="light_rotation_speed_fast">Fast</string>
    <string name="light_rotation_speed_moderate">Moderate</string>
    <string name="light_rotation_speed_slow">Slow</string>
    <string name="light_brightness_unsupported_title">Brightness adjustment is not supported in the Rotating Color Cycle</string>


    <string name="time_zone_Majuro">Majuro</string>
    <string name="time_zone_Midway">Midway</string>
    <string name="time_zone_Honolulu">Honolulu</string>
    <string name="time_zone_Anchorage">Anchorage</string>
    <string name="time_zone_Los_Angeles">Los_Angeles</string>
    <string name="time_zone_Tijuana">Tijuana</string>
    <string name="time_zone_Phoenix">Phoenix</string>
    <string name="time_zone_Chihuahua">Chihuahua</string>
    <string name="time_zone_Denver">Denver</string>
    <string name="time_zone_Costa_Rica">Costa_Rica</string>
    <string name="time_zone_Chicago">Chicago</string>
    <string name="time_zone_Mexico_City">Mexico_City</string>
    <string name="time_zone_Regina">Regina</string>
    <string name="time_zone_Bogota">Bogota</string>
    <string name="time_zone_New_York">New_York</string>
    <string name="time_zone_Caracas">Caracas</string>
    <string name="time_zone_Barbados">Barbados</string>
    <string name="time_zone_Manaus">Manaus</string>
    <string name="time_zone_Santiago">Santiago</string>
    <string name="time_zone_St_Johns">St_Johns</string>
    <string name="time_zone_Buenos_Aires">Buenos_Aires</string>
    <string name="time_zone_Godthab">Godthab</string>
    <string name="time_zone_Montevideo">Montevideo</string>
    <string name="time_zone_South_Georgia">South_Georgia</string>
    <string name="time_zone_Azores">Azores</string>
    <string name="time_zone_Cape_Verde">Cape_Verde</string>
    <string name="time_zone_Casablanca">Casablanca</string>
    <string name="time_zone_London">London</string>
    <string name="time_zone_Amsterdam">Amsterdam</string>
    <string name="time_zone_Belgrade">Belgrade</string>
    <string name="time_zone_Brussels">Brussels</string>
    <string name="time_zone_Sarajevo">Sarajevo</string>
    <string name="time_zone_Windhoek">Windhoek</string>
    <string name="time_zone_Brazzaville">Brazzaville</string>
    <string name="time_zone_Amman">Amman</string>
    <string name="time_zone_Athens">Athens</string>
    <string name="time_zone_Beirut">Beirut</string>
    <string name="time_zone_Cairo">Cairo</string>
    <string name="time_zone_Helsinki">Helsinki</string>
    <string name="time_zone_Jerusalem">Jerusalem</string>
    <string name="time_zone_Minsk">Minsk</string>
    <string name="time_zone_Harare">Harare</string>
    <string name="time_zone_Baghdad">Baghdad</string>
    <string name="time_zone_Moscow">Moscow</string>
    <string name="time_zone_Kuwait">Kuwait</string>
    <string name="time_zone_Nairobi">Nairobi</string>
    <string name="time_zone_Tehran">Tehran</string>
    <string name="time_zone_Baku">Baku</string>
    <string name="time_zone_Tbilisi">Tbilisi</string>
    <string name="time_zone_Yerevan">Yerevan</string>
    <string name="time_zone_Dubai">Dubai</string>
    <string name="time_zone_Kabul">Kabul</string>
    <string name="time_zone_Karachi">Karachi</string>
    <string name="time_zone_Oral">Oral</string>
    <string name="time_zone_Yekaterinburg">Yekaterinburg</string>
    <string name="time_zone_Calcutta">Calcutta</string>
    <string name="time_zone_Colombo">Colombo</string>
    <string name="time_zone_Katmandu">Katmandu</string>
    <string name="time_zone_Almaty">Almaty</string>
    <string name="time_zone_Rangoon">Rangoon</string>
    <string name="time_zone_Krasnoyarsk">Krasnoyarsk</string>
    <string name="time_zone_Bangkok">Bangkok</string>
    <string name="time_zone_Shanghai">China Standard Time</string>
    <string name="time_zone_Hong_Kong">Hong_Kong</string>
    <string name="time_zone_Irkutsk">Irkutsk</string>
    <string name="time_zone_Kuala_Lumpur">Kuala_Lumpur</string>
    <string name="time_zone_Perth">Perth</string>
    <string name="time_zone_Taipei">Taipei</string>
    <string name="time_zone_Seoul">Seoul</string>
    <string name="time_zone_Tokyo">Tokyo</string>
    <string name="time_zone_Yakutsk">Yakutsk</string>
    <string name="time_zone_Adelaide">Adelaide</string>
    <string name="time_zone_Darwin">Darwin</string>
    <string name="time_zone_Brisbane">Brisbane</string>
    <string name="time_zone_Hobart">Hobart</string>
    <string name="time_zone_Sydney">Sydney</string>
    <string name="time_zone_Vladivostok">Vladivostok</string>
    <string name="time_zone_Guam">Guam</string>
    <string name="time_zone_Magadan">Magadan</string>
    <string name="time_zone_Auckland">Auckland</string>
    <string name="time_zone_Fiji">Fiji</string>
    <string name="time_zone_Tongatapu">Brisbane</string>
    <string name="time_zone_Madrid">Madrid</string>
</resources>