<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    android:paddingTop="30dp"
    tools:context=".AboutActivity">

    <!-- 页面标题：关于设备 -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 信息列表容器（左标题 + 右内容） -->
    <LinearLayout
        android:id="@+id/ll_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/deviceinfo_content_marginTop"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 2. 设备号 -->
        <!-- 设备编号 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/device_code"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layoutDirection="ltr"
                android:textDirection="ltr"/>

            <!-- 中间占位View，撑开剩余空间 -->
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:text="TWD-GAME-001" />
        </LinearLayout>

        <!-- 软件版本号 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/software_version"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layoutDirection="ltr"
                android:textDirection="ltr"/>

            <!-- 中间占位View，撑开剩余空间 -->
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_software_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:text="V1.0.0" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/wifi_mac"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_wifi_mac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:text="00:08:22:BD:3C:5A" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/bluetooth_mac"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_bluetooth_mac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:text="00.00.01.01" />
        </LinearLayout>
        <TextView
            android:id="@+id/factory_tv"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/factory_button"
            android:textColor="@drawable/text_color_selector"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_option_selector"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>